Bug 255655 - Events always start at 10 am
Summary: Events always start at 10 am
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-30 11:42 UTC by Matthias Fuchs
Modified: 2010-10-30 19:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Fuchs 2010-10-30 11:42:27 UTC
Version:           SVN trunk (KDE 4)
OS:                Linux

No matter if I try to create an event by double clicking in the calendar or by right clicking, the default start time is always 10 am.

Reproducible: Always



Expected Results:  
It should be the same as when creating a To-Do in the calendar, here the "place" (i.e. the time) I right click in the calendar is taken into consideration.

Right clicking at 1 pm should create an event starting at 1 pm, not at 10 am.
Comment 1 Sergio Martins 2010-10-30 19:03:08 UTC
SVN commit 1191332 by smartins:

Only use the default start time from config if the specified one isn't valid.

BUG: 255655

 M  +2 -1      incidencedefaults.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191332