Only use the default start time from config if the specified one isn't valid.

BUG: 255655

svn path=/trunk/KDE/kdepim/incidenceeditor-ng/; revision=1191332